Fixed issue with resume overflow

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ html {
 }
 body {
 	width:90%;
-	height: 90vh;
+	height: 95vh;
 	background-size:cover;
 	background-repeat:no-repeat;
 	background-position: center center;
@@ -69,6 +69,7 @@ body {
 	margin-right: 5%;
 	margin-top: 2.5vmin;
 	margin-bottom: 2.5vmin;
+	padding: 0;
 }
 .links {
 	display: inline-block;
@@ -150,7 +151,7 @@ figure {
 #selected {
 	background-color: rgba(240,20 ,20, 0.5);
 	border-radius: 20px;
-	padding: 1.0%;
+	padding: 1vmin;
 	margin: 0;
 	cursor: pointer;
 }
